Web Inspector: the "Sources" column is always empty in CSS selector profiles https://bugs.webkit.org/show_bug.cgi?id=104225

Reviewed by Pavel Feldman.

Source/WebCore:

r112923 and preceding changesets modified the CSSOM wrapper creation for StyleRules in a way
that would not specify the parent CSSStyleSheet for the CSSStyleRules created. Instead,
styleResolver->ensureFullCSSOMWrapperForInspector(rule) is now used to make sure the CSSStyleRule
has a valid parent CSSStyleSheet.

Test: inspector/profiler/selector-profiler-url.html

* css/StyleResolver.cpp:
(WebCore::StyleResolver::collectMatchingRulesForList):
(WebCore::StyleResolver::applyProperties):
* inspector/InspectorInstrumentation.cpp:
(WebCore):
(WebCore::InspectorInstrumentation::willMatchRuleImpl):
(WebCore::InspectorInstrumentation::willProcessRuleImpl):
* inspector/InspectorInstrumentation.h:
(WebCore):
(InspectorInstrumentation):
(WebCore::InspectorInstrumentation::willMatchRule):
(WebCore::InspectorInstrumentation::willProcessRule):

LayoutTests:

* inspector/profiler/selector-profiler-url-expected.txt: Added.
* inspector/profiler/selector-profiler-url.html: Added.


Canonical link: https://commits.webkit.org/122523@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136948 268f45cc-cd09-0410-ab3c-d52691b4dbfc